--- a/index.html
+++ b/index.html
@@ -14,11 +14,21 @@
 	<title>RG</title>
 </head>
 
-<body class="red">
+<body class="">
 
-	<div class="container">
+	<div class="container | min-vh-100 | d-flex justify-content-center align-items-center">
 
-		<h1>Rodeo Gaming</h1>
+		<main class="text-center">
+			<h1>Rodeo Gaming</h1>
+
+			<div class="progress">
+				<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+					aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+			</div>
+
+			<h2>Proximamente...</h2>
+		</main>
+
 
 	</div>
 
