--- a/index.html
+++ b/index.html
@@ -19,20 +19,17 @@
 	<div class="container | min-vh-100 | d-flex justify-content-center align-items-center">
 
 		<main class="text-center">
-			<h1>Rodeo Gaming</h1>
 
-			<div class="progress">
-				<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-					aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-			</div>
+			<img src="./assets/images/rodeo-gaming-logo.png" class="img-fluid" alt="...">
 
-			<h2>Proximamente...</h2>
+			<h1 class="title">Rodeo gaming</h1>
+			<span class="subtitle">RG</span>
+
+			<h2 class="mt-3">Proximamente...</h2>
 		</main>
 
 
 	</div>
-
-	<!-- Option 2: Separate Popper and Bootstrap JS -->
 
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
 		integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
