--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		<main class="text-center">
 
-			<img src="./assets/images/rodeo-gaming-logo.png" class="img-fluid" alt="...">
+			<img src="./assets/images/rodeo-gaming-logo.png" class="img-fluid" alt="Rodeo Gaming logo">
 
 			<h1 class="title">Rodeo gaming</h1>
 			<span class="subtitle">RG</span>
